--- a/res/menu/student.xml
+++ b/res/menu/student.xml
@@ -1,20 +1,21 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 	<item
-		android:id="@+id/action_information"
+		android:id="@+id/action_refresh"
+		android:icon="@android:drawable/ic_menu_rotate"
+		android:title="@string/menu_refresh"
 		android:orderInCategory="101"
-		android:showAsAction="ifRoom"
-		android:title="@string/menu_information"
-		android:icon="@android:drawable/ic_menu_info_details" />
+		app:showAsAction="always" />
 	<item
 		android:id="@+id/action_setting"
-		android:orderInCategory="102"
-		android:showAsAction="ifRoom"
+		android:icon="@android:drawable/ic_menu_preferences"
 		android:title="@string/menu_setting"
-		android:icon="@android:drawable/ic_menu_preferences" />
+		android:orderInCategory="102"
+		app:showAsAction="always" />
 	<item
 		android:id="@+id/action_exit"
-		android:orderInCategory="103"
-		android:showAsAction="ifRoom"
+		android:icon="@android:drawable/ic_menu_close_clear_cancel"
 		android:title="@string/menu_exit"
-		android:icon="@android:drawable/ic_menu_close_clear_cancel" />
+		android:orderInCategory="103"
+		app:showAsAction="always" />
 </menu>
