--- a/res/menu/student.xml
+++ b/res/menu/student.xml
@@ -2,19 +2,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 	<item
 		android:id="@+id/action_refresh"
-		android:icon="@android:drawable/ic_menu_rotate"
+		android:icon="@drawable/ic_action_refresh"
 		android:title="@string/menu_refresh"
 		android:orderInCategory="101"
 		app:showAsAction="always" />
 	<item
 		android:id="@+id/action_setting"
-		android:icon="@android:drawable/ic_menu_preferences"
+		android:icon="@drawable/ic_action_settings"
 		android:title="@string/menu_setting"
 		android:orderInCategory="102"
 		app:showAsAction="always" />
 	<item
 		android:id="@+id/action_exit"
-		android:icon="@android:drawable/ic_menu_close_clear_cancel"
+		android:icon="@drawable/ic_action_cancel"
 		android:title="@string/menu_exit"
 		android:orderInCategory="103"
 		app:showAsAction="always" />
