--- a/res/layout/student.xml
+++ b/res/layout/student.xml
@@ -7,10 +7,15 @@
 		android:id="@+id/content_frame"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent" >
-		<WebView
-			android:id="@+id/webview"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent" />
+		<android.support.v4.widget.SwipeRefreshLayout
+		    android:id="@+id/swiperefresh"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent" >
+			<WebView
+				android:id="@+id/webview"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent" />
+		</android.support.v4.widget.SwipeRefreshLayout>
 		<View
 			android:id="@+id/cover"
 			android:layout_width="match_parent"
