--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -1,9 +1,20 @@
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="horizontal"
 	android:layout_width="match_parent"
-	android:layout_height="60dp"
-	android:gravity="center_vertical"
-	android:paddingLeft="16dp"
-	android:paddingRight="16dp"
-	android:textColor="#FF000000"
-	android:textSize="20sp" />
+	android:layout_height="48dp" >
+	<ImageView
+		android:id="@+id/listitem_icon"
+		android:layout_height="24dp"
+		android:layout_width="24dp"
+		android:layout_gravity="center"
+		android:layout_marginLeft="16dp"
+		android:layout_marginRight="16dp" />
+	<TextView
+	    android:id="@+id/listitem_title"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_vertical"
+		android:textSize="14sp"
+		android:textColor="#FF000000" />
+</LinearLayout>
