--- a/res/layout/student.xml
+++ b/res/layout/student.xml
@@ -1,60 +1,71 @@
 <android.support.v4.widget.DrawerLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	<FrameLayout
-		android:id="@+id/content_frame"
+	android:layout_height="match_parent" >
+	<android.support.design.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent" >
-		<android.support.v4.widget.SwipeRefreshLayout
-			android:id="@+id/swiperefresh"
+		<android.support.v4.widget.NestedScrollView
+			android:id="@+id/nestedscrollview"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent" >
+			android:layout_height="match_parent"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 			<WebView
 				android:id="@+id/webview"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent" />
-		</android.support.v4.widget.SwipeRefreshLayout>
-		<View
-			android:id="@+id/cover"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent" />
-		<ProgressBar
-			android:id="@+id/progress"
-			android:layout_width="match_parent"
-			android:layout_height="4dip"
-			android:max="100"
-			style="?android:attr/progressBarStyleHorizontal" />
-	</FrameLayout>
-	<RelativeLayout
-		android:id="@+id/left_drawer"
-		android:layout_width="240dp"
+				android:layout_height="match_parent"
+				app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+		</android.support.v4.widget.NestedScrollView>
+		<android.support.design.widget.AppBarLayout
+			android:layout_height="wrap_content"
+			android:layout_width="match_parent" >
+			<android.support.v7.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:background="?attr/colorPrimary"
+				app:layout_scrollFlags="scroll|enterAlways" >
+				<LinearLayout
+					android:id="@+id/toolbar_information"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:orientation="vertical" >
+					<TextView
+						android:id="@+id/toolbar_title"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/app_name"
+						android:textSize="@dimen/abc_text_size_title_material_toolbar"
+						android:ellipsize="marquee"
+						android:marqueeRepeatLimit="marquee_forever"
+						android:singleLine="true" />
+					<TextView
+						android:id="@+id/toolbar_subtitle"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
+						android:ellipsize="marquee"
+						android:marqueeRepeatLimit="marquee_forever"
+						android:singleLine="true"
+						android:visibility="gone" />
+				</LinearLayout>
+			</android.support.v7.widget.Toolbar>
+			<ProgressBar
+				android:id="@+id/progressbar"
+				android:layout_width="match_parent"
+				android:layout_height="3dp"
+				android:progressDrawable="@drawable/progressbar"
+				style="?android:attr/progressBarStyleHorizontal" />
+		</android.support.design.widget.AppBarLayout>
+	</android.support.design.widget.CoordinatorLayout>
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/left_list"
+		android:layout_width="300dp"
 		android:layout_height="wrap_content"
 		android:layout_gravity="start"
-		android:background="#FFF3F3F3" >
-		<Button
-			android:id="@+id/left_banner"
-			android:layout_alignParentTop="true"
-			android:layout_width="match_parent"
-			android:layout_height="160dp"
-			android:gravity="center" />
-		<TextView
-			android:id="@+id/left_text"
-			android:layout_alignParentBottom="true"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:gravity="center"
-			android:text="@string/drawer_status_0"
-			android:textSize="16sp" />
-		<ListView
-			android:id="@+id/left_list"
-			android:layout_below="@id/left_banner"
-			android:layout_above="@id/left_text"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:cacheColorHint="#FFFFFFFF"
-			android:choiceMode="singleChoice"
-			android:divider="@null" />
-	</RelativeLayout>
+		android:background="@color/menu_bg_none"
+		android:cacheColorHint="@color/menu_bg_none"
+		android:drawSelectorOnTop="true" />
 </android.support.v4.widget.DrawerLayout>
