--- a/res/menu/student.xml
+++ b/res/menu/student.xml
@@ -1,15 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+<menu 
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto" >
+	<item
+		android:id="@+id/action_refresh"
+		android:title="@string/action_refresh"
+		app:showAsAction="never" />
 	<item
 		android:id="@+id/action_setting"
-		android:icon="@drawable/ic_action_settings"
-		android:title="@string/menu_setting"
-		android:orderInCategory="101"
-		app:showAsAction="always" />
+		android:title="@string/action_setting"
+		app:showAsAction="never" />
 	<item
 		android:id="@+id/action_exit"
-		android:icon="@drawable/ic_action_cancel"
-		android:title="@string/menu_exit"
-		android:orderInCategory="102"
-		app:showAsAction="always" />
+		android:title="@string/action_exit"
+		app:showAsAction="never" />
 </menu>
